deploy/w3f/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: 'true'
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app
  namespace: ai-cns
spec:
  ingressClassName: nginx
  rules:
    - host: ai-cns-hackathon-eu-dev.sandbox.web3factory.consensys.net
      http:
        paths:
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3069
            path: /slack69
            pathType: Prefix
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3070
            path: /slack70
            pathType: Prefix
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3071
            path: /slack71
            pathType: Prefix
  tls:
    - hosts:
        - ai-cns-hackathon-eu-dev.sandbox.web3factory.consensys.net
